--- a/style.css
+++ b/style.css
@@ -115,6 +115,26 @@ body {
     position: relative;
 }
 
+#log-in {
+    position: absolute;
+    top: 0.2rem;
+    right: 0.2rem;
+    display: none;
+    gap: 0.5rem;
+}
+
+#log-in input {
+    height: 2.1rem;
+    width: 13rem;
+    border-radius: 10px;
+    padding-left: 0.3rem;
+}
+
+#enter:hover {
+    color: var(--text-color);
+    background-color: #242582;
+}
+
 .landing h1, .landing p {
     position: absolute;
     top: 48.5%;
@@ -285,7 +305,7 @@ legend {
 }
 
 button {
-    padding: 0.5rem;
+    padding: 0.4rem;
     border-radius: 10px;
 }
 
@@ -525,6 +545,22 @@ textarea {
 
     .logo {
         font-size: 0.9rem;
+    }
+    
+    #log-in {
+        flex-direction: column;
+        align-items: end;
+        gap: 0.1rem;
+    }
+
+    #log-in input {
+        height: 1.5rem;
+        width: 12rem;
+    }
+
+    #enter {
+        padding: 0 0.1rem;
+        font-size: smaller;
     }
 
     .landing h1 {
@@ -773,7 +809,16 @@ textarea {
         font-size: 0.3rem;
         gap: 0.1rem;
     }
-    
+
+    #log-in input {
+        height: 1rem;
+        width: 10rem;
+    }
+
+    #enter {
+        font-size: x-small;
+    }
+
     .landing h1 {
         font-size: 0.7rem;
         box-shadow: 0.3px 0.8px 0.3px 1.2px black;
