--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ html {
 
 header > .header__left {
   display: flex;
+  flex-wrap: wrap;
   gap: 2.5rem;
   padding: 2rem;
 }
@@ -65,6 +66,7 @@ header .header__right {
 /* main starts here */
 
 main {
+  width: 100%;
   height: 100vh;
   color: white;
   background-image: url(./images/fashion.jpg);
@@ -75,31 +77,36 @@ main {
 }
 
 .banner {
+  display: flex;
+  flex-wrap: wrap;
   top: 15rem;
   color: rgba(0, 0, 0);
   padding: 3rem 1rem;
   background-color: rgba(240, 248, 255, 0.5);
-  width: 500px;
+  max-width: 500px;
+  height: auto;
 
   position: relative;
 }
 
-.banner > p {
+.banner > p,
+h2 {
+  display: flex;
+  flex-wrap: wrap;
   margin-top: 20px;
 }
 
-.banner h1 {
-  color: red;
-}
 .badge {
+  display: flex;
   background-color: rgb(44, 40, 40);
   color: white;
   width: 7.5rem;
+  height: 2rem;
   padding: 0.25rem 0.4rem;
 
   position: absolute;
-  top: 100px;
-  right: -20px;
+  top: 135px;
+  right: -18px;
 }
 
 /* main starts here */
@@ -143,7 +150,7 @@ main {
 
 /* section-two starts here */
 
-#jacket h2 {
+#jacket h1 {
   text-align: center;
   margin: 4rem;
 }
@@ -183,6 +190,7 @@ main {
 
 footer {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
@@ -220,4 +228,14 @@ footer {
   text-align: center;
 }
 
+.policy {
+  margin-left: 3rem;
+  margin-bottom: 0;
+}
+
+.cards {
+  width: 100%;
+  height: 120px;
+  background-color: black;
+}
 /* footer ends here */
