--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ main {
   padding: 3rem 1rem;
   background-color: rgba(240, 248, 255, 0.5);
   max-width: 500px;
-  height: auto;
+  height: 250px;
 
   position: relative;
 }
@@ -105,7 +105,7 @@ h2 {
   padding: 0.25rem 0.4rem;
 
   position: absolute;
-  top: 135px;
+  top: 205px;
   right: -18px;
 }
 
@@ -168,8 +168,8 @@ h2 {
 }
 
 .shopping .shopping__btn {
-  width: 650px;
   height: 60px;
+  width: 70%;
   border-style: none;
 }
 
@@ -179,7 +179,7 @@ h2 {
 }
 
 .shopping .shopping__btn--buy {
-  width: 650px;
+  width: 70%;
   height: 60px;
   background-color: rgb(86, 2, 243);
   color: white;
@@ -190,8 +190,8 @@ h2 {
 
 footer {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
+
   justify-content: space-between;
   height: 100vh;
   color: white;
@@ -200,6 +200,7 @@ footer {
 
 .top {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 170px 50px;
   gap: 2rem;
@@ -234,7 +235,7 @@ footer {
 
 .cards {
   width: 100%;
-  height: 120px;
+  height: 80px;
   background-color: black;
 }
 /* footer ends here */
