--- a/product.css
+++ b/product.css
@@ -149,11 +149,122 @@ marquee {
     color: red;
     position: absolute;
 }
+/* main end here */
 
 
 
+@media (max-width:600px) {
 
+  nav {
+    background-color: #579BB1;
+    height: 2rem;
+    width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    position:fixed;
+    
+    
+  }
+  
+  
+  .navbar__icon {
+    font-size: 1.5rem;
+    margin-right:3rem ;
+    margin-top: 0.5rem;
+    
+  }
+  .navbar__lists {
+    display: flex;
+    font-size: 0.5rem;
+    text-transform: uppercase;
+  }
+   ul {
+    display: flex;
+    
+      
+      
+  
+  }
+  li {
+   
+    cursor: pointer;
+  }
+  .navbar__list1 {
+    display: flex;
+  
+  float: right;
+  font-size: 0.5rem;
+  
+}
+main {
+  min-height: 100vh;
+  background-color: #22465a;
+}
 
+#item-section {
+  min-height: 100vh;
+  max-width:600px ;
+  display: flex ;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+.item__tittle {
+  color: beige;
+  text-transform: uppercase;
+  font-size: 1rem;
+  padding-top: 5rem;
+}
+.item__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items:center;
+  display: grid;
+  grid-template-columns: 1fr 1fr  ;
+  padding: 10rem;
+  grid-column-gap: 3rem ;
+  grid-row-gap: 5rem;
 
+  
+}
+.item__list button {
+  height: 50px;
+  width: 50px;
+  margin-top: 1rem;
+  background-color: rgb(173, 153, 153);
+  border: none;
+  text-transform: uppercase;
+  border-radius: 1.5rem;
+  box-shadow: 0 7px 10px 0 rgba(0,0,0,0.5);
+}
+.item__list button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 14px 20px 0 rgba(0,0,0,0.5);
+}
 
-  /* main end here */
+.item__list img {
+  height: 200px;
+  max-width: 150px;
+  border-radius: 3px;
+  box-shadow: 0 12px 140px 0 rgba(0,0,0,0.5);
+  transition-property: box-shadow;
+}
+.item__list img:hover {
+  box-shadow: 0 20px 20px 0 rgba(0,0,0,0.5);
+  transition-property: box-shadow;
+  transition-duration: 5s;
+}
+
+.sale__badge {
+  background-color: red;
+  font-size: 1rem;
+  border-radius: 10rem;
+  position: absolute;
+  top: -2rem;
+  right: -1.5rem;
+}
+  
+}
