--- a/style.css
+++ b/style.css
@@ -110,12 +110,7 @@ nav{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 4rem;
 }
-/* .nav-bar{
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content: space-between;
-} */
+
 #nav-bar1{
     background-color: rgba(236, 20, 56, 0.512);
     color: #fff;
@@ -174,14 +169,6 @@ nav{
     
     
 
-/* .banner .container{
-    display: flex;
-    width: 100%;
-    padding: var(--padding);
-    margin-bottom: 3rem;
-    
-} */
-/* img resposiveness */
 
 
 .container .btn__header{
@@ -265,7 +252,7 @@ main{
     height: 15rem;
     filter: saturate(0);
     transition: var(--transition);
-
+    object-fit: cover;
 }
 .product__img:hover{
     filter: saturate(1);
@@ -315,6 +302,8 @@ main{
     flex: 0.2;
     width:15rem ;
     height: 10rem;
+    margin: 1rem;
+    padding: 2rem;
 }
 .cart__item-desciption{
     flex: 0.4;
@@ -388,7 +377,7 @@ main{
     min-height: 60vh;
 }
 .resarvation .card{
-   width: 45rem;
+   width: 30rem;
 }
 .form{
     flex: 1;
@@ -408,7 +397,7 @@ main{
     min-height: 60vh;
 }
 .contact .card{
-    width: 45rem;
+    width: 30rem;
 }
 .contact h2{
     color: rgb(237, 138, 16);
@@ -449,7 +438,6 @@ main{
     text-align: center;
     width: 100%;
     height: 100%;
-    /* margin-bottom: 0.5rem; */
     left: 0;
     right: 0;
     gap: 2rem;
@@ -602,7 +590,14 @@ main{
     .footer__subscription{
         flex-direction: column;
     }
+    .products{
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+    .cart__items, .cart__payment{
+        width: 90%;
+    }
 }
+
 
 
 /* responsiveness ends here  */
