burger menus added, desined, and functional

--- a/style.css
+++ b/style.css
@@ -69,13 +69,22 @@ body {
     text-align: center;
 }
 
-.nav-links {
+.drop {
     flex-grow: 4;
-    justify-content: space-between;
 }
 
-.user-nav {
-    gap: 0.5rem;
+#nav-list-drop {
+    justify-content: space-between;
+    width: 100%;
+}
+
+#user-nav-drop {
+    gap: 0.6rem;
+}
+
+.fa-list {
+    display: none;
+    text-align: center;
 }
 
 .logo {
@@ -96,8 +105,12 @@ body {
 .navbar a, .navbar i {
     color: var(--text-color);
     border-radius: var(--items-border);
-    padding: 0.4rem;
+    padding: 0.3rem;
     transition: all 0.5s;
+}
+
+a[href="/cart.html"] {
+    padding: 0;
 }
 
 .navbar a:hover, .navbar i:hover {
@@ -119,9 +132,6 @@ body {
     top: 0.2rem;
     right: 0.5rem;
     gap: 0.5rem;
-}
-
-.hidden {
     display: none;
 }
 
@@ -456,9 +466,7 @@ textarea {
     }
 
     .navbar {
-        font-size: 1.2rem;
-        gap: 1.4rem;
-        padding: 0.4rem;
+        font-size: 1rem;
     }
 
     .logo {
@@ -540,11 +548,6 @@ textarea {
         width: 1.2rem;
     }
 
-    .navbar {
-        gap: 1rem;
-        padding: 0.3rem;
-    }
-
     .logo {
         font-size: 0.9rem;
     }
@@ -591,29 +594,37 @@ textarea {
         width: 1.1rem;
     }
     
-    .navbar {
-        gap: 0.7rem;
-        padding: 0.2rem 0;
-        justify-content: space-around;
+    .logo {
+        font-size: 0.8rem;
+        padding: 0.3rem;
     }
 
-    .logo {
-        display: none;
+    .navbar {
+        justify-content: space-around;
     }
 
     .navbar > a {
         flex-grow: 0;
-        text-align: left;
-    }
-    
-    .navbar a, .navbar i {
-        padding: 0.2rem;
     }
 
-    .nav-links {
-        margin: 0 1rem;
+    .fa-list {
+        display: block;
+    }
+
+    a[href="#clothes"], i[class="fa-solid fa-magnifying-glass close-list2"] {
+        margin-top: 0.3rem;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    .show {
+        flex-direction: column;
+    }
+
+    .drop {
         flex-grow: 0;
-        width: 57%;
     }
 
     .landing h1 {
@@ -660,8 +671,18 @@ textarea {
         width: 1rem;
     }
     
-    .navbar {
-        font-size: 0.8rem;
+    .logo {
+        font-size: 0.7rem;
+        padding: 0.19rem;
+    }
+
+    .logo span {
+        padding: 0.1rem 0.2rem;
+    }
+
+    .navbar a, .navbar i {
+        font-size: 0.7rem;
+        padding: 0.3rem;
     }
 
     .landing h1 {
@@ -729,9 +750,13 @@ textarea {
         width: 0.9rem;
     }
     
-    .navbar {
-        font-size: 0.5rem;
-        padding: 0.1rem;
+    #user-nav-drop {
+        gap: 0.4rem;
+    }
+
+    .logo {
+        font-size: 0.6rem;
+        padding: 0.17rem;
     }
 
     .landing h1 {
@@ -808,9 +833,17 @@ textarea {
         width: 0.6rem;
     }
     
-    .navbar {
-        font-size: 0.3rem;
-        gap: 0.1rem;
+    .logo {
+        font-size: 0.5rem;
+    }
+
+    .navbar a, .navbar i {
+        font-size: 0.25rem;
+        padding: 0.25;
+    }
+
+    #user-nav-drop {
+        gap: 0.15rem;
     }
 
     #login input {
