--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ body {
     width: 2rem;
 }
 
+.pages img:nth-child(6) {
+    display: none;
+}
+
 .navbar {
     background-color: rgb(85, 61, 103);
     padding: 1em;
@@ -375,6 +379,7 @@ textarea {
     background-image: url(/src/images/cart.png);
     background-size: 100% 100%;
     opacity: 0.7;
+    padding: 0.25em;
 }
 
 .cart legend, table {
@@ -615,10 +620,6 @@ table button:hover, .fa-trash:hover {
         width: 2rem;
     }
 
-    .pages {
-        padding: 0.8em;
-    }
-
     .pages a {
         font-size: 1.1rem;
     }
@@ -666,6 +667,22 @@ table button:hover, .fa-trash:hover {
     }
 
     .fa-list {
+        display: block;
+    }
+
+    .pages {
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr 3fr 1fr;
+        gap: 1.5rem;
+        width: 95%;
+        margin: auto;
+    }
+
+    .pages a {
+        text-align: center;
+    }
+
+    .pages img:nth-child(6) {
         display: block;
     }
 
@@ -751,6 +768,7 @@ table button:hover, .fa-trash:hover {
 
 @media all and (max-width: 745px) {
     .landing h1, .landing p {
+        left: 48.5%;
         font-size: 2rem;
         box-shadow: 1px 2px 1px 2px black;
     }
@@ -786,14 +804,6 @@ table button:hover, .fa-trash:hover {
         width: 1.5rem;
     }
 
-    .pages a {
-        font-size: 0.9rem;
-    }
-
-    .pages img {
-        width: 0.9rem;
-    }
-
     .navbar {
         gap: 1rem;
     }
@@ -803,7 +813,7 @@ table button:hover, .fa-trash:hover {
     }
 
     .landing h1 {
-        font-size: 1.45rem;
+        font-size: 1.3rem;
     }
 
     #login {
