cart page added

--- a/login.css
+++ b/login.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body {
     background-color:#B08BBB;
     font-family: Arial;
@@ -5,6 +8,24 @@ body {
     margin: 0;
 }
 .container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+header {
+    position:sticky;
+    top:0;
+    display:flex;
+    justify-content:space-evenly;
+    align-items: center;
+    font-size:15px;
+    background-color:#D7E9B9;
+    padding: 20px;
+}
+header a{
+    text-decoration: none;
+    color: rgb(21, 20, 20);
+}
+.login {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
@@ -17,21 +38,23 @@ form {
     background-color: #f5f5f5;
     padding: 20px;
     border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 label {
     display: block;
     margin-bottom: 10px;
 }
 input[type="text"], input[type="password"] {
-    width: 70%;
     padding: 12px 20px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 input[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
+    display:block;
+    background-color:#a573b4;
+    color: rgba(23, 1, 1, 0.933);
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
@@ -39,5 +62,12 @@ input[type="submit"] {
     margin-top: 10px;
 }
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #a708a9;
+}
+@media screen and (max-width: 500px) {
+    header {
+        flex-direction:initial;
+        gap:1rem;
+        padding :1rem;
+    }
 }
