--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,6 +17,7 @@ body{
     background-color: rgb(103, 46, 34);
     margin: 8px auto;
     width: 100%;
+    height: 100vh;
 }
 
 html{
@@ -70,11 +71,19 @@ main{
     margin: 100px auto;
 }
 
-.middle{
+/**.middle{
   margin: 100px;
   /* padding-left: 100pc; */
-  width: 50%;
+  /* width: 50%; */
+
+
+.middle {
+  text-align: center;
+  /* margin: 100px; */
+  margin-top: 120px;
 }
+  /* padding-left: 100pc; */
+/* width: 50%;*/
 
 .middle.fika{
   font-size: large;
@@ -144,4 +153,10 @@ main{
   .product{
     justify-content: center;
     margin: 200px;
+  }
+
+  .menubtn{
+    position: absolute;
+    top: 45%;
+    
   }
