--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,11 +57,11 @@ html::-webkit-scrollbar-thumb{
     z-index: 100;
 }
 
-.site_header.logo{
+.logo{
     height: 100px;
 }
 
-.site_header #logo_img{
+.logo #logo_img{
     border-radius: 50%;
     width: 100px;
     height: 100px;
@@ -94,35 +94,35 @@ main{
   justify-content: center;
 }
 
-.site_header.navbar {
+.navbar {
     padding: 2px;
     margin: 2px;
     height: 80px;
   }
   
-.site_header.navbar ul {
+.navbar ul {
     padding: 10px;
     display: flex;
     justify-content: center;
     list-style: none;
   }
   
-.site_header.navbar ul li {
+.navbar ul li {
     padding: 10px 20px;
     font-size: 27px;
   }
   
-.site_header.navbar ul li:hover {
+.navbar ul li:hover {
     background-color: rgba(249, 225, 225, 0.932);
     transition: 0.9s;
   }
 
-.site_header.navbar ul li a{
+.navbar ul li a{
     color: black;
     font-family: 'Rancho', cursive;
   }
 
-  .site_header.search_form{
+.search_form{
     position: absolute;
     top: 115%;
     right: 7%;
@@ -133,7 +133,7 @@ main{
     align-items: center;
   }
 
-  .site_header.search_form input{
+.search_form input{
     height: 100%;
     width: 100%;
     font-size: 1.6rem;
@@ -142,35 +142,48 @@ main{
     text-transform: none;
   }
 
-  .site_header.icons div{
+.search_form label{
+  cursor: pointer;
+  font-size: 2.2rem;
+  margin-right: 1.5rem;
+  color: #9b5151;
+}
+
+
+.search_form label:hover{
+  color: #d6b6b6;
+}
+
+
+/* .icons div{
     color: #fff;
     cursor: pointer;
     font-size: 2.5rem;
     margin-left: 2rem;
+  } */
+
+
+.icons div:hover{
+
+    color: rgba(249, 225, 225, 0.932);
   }
 
-
-  .site_header.icons div:hover{
-
-    color: var(--main-color);
-  }
-
-  #menu-btn{
+  /* #menu-btn{
     display: none;
-  }
+  } */
 
 
-  .site_header.cart_item_container{
+.cart_item_container{
     position: absolute;
     top: 100%;
     right: 0;
-    height: 600px;
-    width: 700px;
+    height: 6rem;
+    width: 7rem;
     background: #fff;
     padding: 0 1.5rem;
   }
 
-  .site_header.cart_item_container.cart_item{
+  .cart_item{
     position: relative;
     margin: 2rem 0;
     display: flex;
@@ -179,16 +192,16 @@ main{
   }
 
 
-  .site_header.cart_item_container.cart_item.fas fa-times{
+  .fas fa-times{
     position: absolute;
     top: 1rem;
     right: 1rem;
     font-size: 2rem;
     cursor: pointer;
-    color: var(--black);
+    color: black;
   }
 
- .cart_item.fas fa-times:hover{
+ .fas fa-times:hover{
     color: rgba(249, 225, 225, 0.932);
   }
 
@@ -229,8 +242,8 @@ main{
     margin: 200px;
   }
 
-  .menubtn{
+  /* .menubtn{
     position: absolute;
     top: 45%;
     
-  }
+  } */
